--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
                    
                     <div class="col-lg-4 text-lg-end">
-                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
+                          <a class="link-dark text-decoration-none me-3" href="Privacy Policy for ROBOTS-RASH - FreePrivacyPolicy.com.html">Privacy Policy</a>
                         <a class="link-dark text-decoration-none" href="#!">Terms And Conditions</a>
                     </div>
                 </div>
