--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">CUTE ROBOTS</div>
-                                <div class="portfolio-caption-subheading text-muted">ROBOTS WITH CUTE LOOK</div>
+                                <div class="portfolio-caption-heading">PERSONAL ROBOTS</div>
+                                <div class="portfolio-caption-subheading text-muted">Cute looking robots that make our minds happy</div>
                             </div>
                         </div>
                     </div>
@@ -277,11 +277,10 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">CUTE ROBOTS</h2>
+                                    <h2 class="text-uppercase">PERSONAL ROBOTS</h2>
                            
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
-                                    <p>
-The features that make robots cute are the same features that make anything cute: neoteny. Neoteny is the retention of features in adults typically found in juveniles. Babies have a big head and large eyes in proportion to their bodies. These features cue our desire to parent.</p>
+                                    <p>A personal robot is one that enables an individual to automate the repetitive or menial part of home or work life making them more productive ‍‍‍‍‍‍.</p>
                                     
                                        <a class="btn btn-primary btn-xl text-uppercase" href="cute.html">OPEN PROJECT</a>
                                 </div>
